# libigvt

./: .gitignore  Makefile  README.md  configure.ac  libtool
debian/: changelog  control  copyright  libigvt-dev.install  libigvt.install
src/: Makefile  Makefile.am  igvt.c  igvt.h
